# pypto_runtime_distributed

./: .gitignore  CMakeLists.txt  README.md
docs/: api_reference.md  chip_backend_adapter_spec.md  compiler_output_convention.md  implementation_plan.md  simpler_api_contract.md
examples/: run_test.sh
examples/dfs_sum_test/kernels/: dfs_L3_reader.cpp
examples/ring_stress_test/: verify_ring_stress.sh
examples/ring_stress_test/kernels/: ring_L3_stress.cpp  ring_L4_stress.cpp  ring_L5_stress.cpp
examples/tensor_dag_test/: verify_dag.sh
examples/tensor_dag_test/kernels/: dag_L3_compute.cpp  dag_L4_dispatch.cpp  dag_L5_dispatch.cpp  dag_L6_dispatch.cpp
examples/topology_test/: verify_topology.sh
examples/topology_test/kernels/: topo_L3_host.cpp  topo_L4_pod.cpp  topo_L5_clos1.cpp  topo_L6_clos2.cpp
src/core/: coordinate.h  coordinate_mapper.h  level.h  node_identity.h  task_key.h  tensor.cpp  tensor.h
src/daemon/: code_cache.cpp  code_cache.h  data_cache.cpp  data_cache.h  main.cpp  node_daemon.cpp  node_daemon.h  orchestrator_main.cpp  storage.cpp  storage.h
src/discovery/: filesystem_discovery.cpp  filesystem_discovery.h  peer_registry.cpp  peer_registry.h
src/profiling/: ring_metrics.cpp  ring_metrics.h  trace_writer.cpp  trace_writer.h
src/ring/: linqu_dep_pool.cpp  linqu_dep_pool.h  linqu_heap_ring.cpp  linqu_heap_ring.h  linqu_task_ring.cpp  linqu_task_ring.h
src/runtime/: level_runtime.cpp  level_runtime.h  linqu_dispatcher.h  linqu_orchestration_api.h  linqu_orchestrator_state.cpp  linqu_orchestrator_state.h  linqu_scope.cpp  linqu_scope.h  linqu_tensormap.cpp  linqu_tensormap.h  local_dispatcher.cpp  local_dispatcher.h  mock_dispatcher.h  remote_dispatcher.cpp  remote_dispatcher.h  tree_reduce.h
src/transport/: linqu_header.h  msg_types.h  transport.h  unix_socket_transport.cpp  unix_socket_transport.h
tests/e2e/: test_ipc_roundtrip.sh  test_node_failure.sh  test_orchestrator.sh  test_single_daemon.sh  test_single_pod.sh  test_single_supernode.sh
tests/forward_compat/: test_7_level_smoke.cpp  test_peer_registry_multi_level.cpp
tests/unit/: test_backpressure.cpp  test_completion_wiring.cpp  test_core_identity.cpp  test_daemon.cpp  test_dag.cpp  test_dfs_sum_hierarchy.cpp  test_dfs_sum_hierarchy_pl_at.py  test_dfs_sum_hierarchy_pl_function.py  test_dfs_sum_multiprocess.cpp  test_discovery.cpp  test_dispatch_engine.cpp  test_dispatchers.cpp  test_fanout_isolation.cpp  test_forward_compat.cpp  test_multilevel_chain.cpp  test_orchestration_api.cpp  test_orchestrator_state.cpp  test_param_passing.cpp  test_process_isolation.cpp  test_profiling.cpp  test_query_peers.cpp  test_ring_buffers.cpp  test_ring_retirement.cpp  test_ring_stress.cpp  test_scheduler.cpp  test_scope_tensormap.cpp  test_storage.cpp  test_task_group.cpp  test_tensormap_enhanced.cpp  test_topology.cpp
